unpackaged/main/default/objects/litify_docs__Custom_File_Table_View__c/litify_docs__Custom_File_Table_View__c.object-meta.xml
<CustomObject>
    <description>Object that tracks information about custom file table views.</description>
    <label>Custom File Table View</label>
    <nameField>
        <label>Custom View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom File Table Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>