unpackaged/main/default/objects/litify_docs__Custom_File_Table_View__c/fields/litify_docs__Default_Sort_Field__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Default_Sort_Field__c</fullName>
    <description>Default sort field for custom view</description>
    <inlineHelpText>Default sort field for custom view</inlineHelpText>
    <label>Default Sort Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>