unpackaged/main/default/objects/litify_docs__Custom_File_Table_View__c/fields/litify_docs__Filter_JSON__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Filter_JSON__c</fullName>
    <description>Filters for the custom view in JSON format</description>
    <label>Filter JSON</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>