unpackaged/main/default/objects/litify_docs__Custom_File_Table_View__c/fields/litify_docs__Global__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Global__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the view is to be exposed to the entire org.</description>
    <label>Global</label>
    <type>Checkbox</type>
</CustomField>