unpackaged/main/default/objects/litify_docs__Custom_File_Table_View__c/fields/litify_docs__Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Object_Api_Name__c</fullName>
    <description>Object for which custom view this is available for.</description>
    <inlineHelpText>Object for which custom view this is available for.</inlineHelpText>
    <label>Object Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>